# pgdoctor-cli

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  PRIVACY.md  README.md  TERMS.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: CLI.md  CONFIGURATION.md  DAEMON.md  callback.html
src/: App.tsx  bridge.ts  cli.rs  cli.ts  config.rs  index.css  lib.rs  main.rs  main.tsx  styles.css  types.ts  uploader.rs  utils.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  indexer.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/integrations/: google_drive.rs  mod.rs  notion.rs
src/cli/: commands.rs  config_cmd.rs  daemon.rs  mod.rs  paths.rs
src/collector/: mod.rs  normalizer.rs  snapshot.rs
src/commands/: commands.ts  index.ts
src/components/: FilesScreen.tsx  FilterChips.tsx  IndexScreen.tsx  IntegrationsScreen.tsx  OnboardingScreen.tsx  PreviewPanel.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx  SearchSidebar.tsx  SettingsScreen.tsx  Toast.tsx  TopBar.tsx
src/db/: connection.rs  db.ts  mod.rs  queries.rs  schema.ts
src/indexer/: indexer.ts
src/models/: mod.rs  query.rs  response.rs  snapshot.rs
src/search/: query.ts
src/ui/: app.tsx
src/ui/components/: CommandPalette.tsx  Header.tsx  IndexResults.tsx  PathBar.tsx  SearchInput.tsx  SearchResults.tsx  index.ts
src/ui/components/common/: ProgressBar.tsx  StatsFooter.tsx  StatusMessage.tsx  TextHighlighter.tsx  index.ts
src/ui/components/header/: AppBranding.tsx  AppHeader.tsx  FolderStatus.tsx  QuickTips.tsx  index.ts
src/ui/components/search/: SearchEmptyStates.tsx  SearchResultItem.tsx  SearchResultsHeader.tsx  SearchResultsList.tsx  index.ts
src/ui/hooks/: index.ts  useAppConfig.ts  useCommandExecution.ts  useFileOpener.ts  useInputHandler.ts  useKeyboardNavigation.ts  useSearch.ts
src/ui/theme/: index.tsx
