[package]
name = "pgdoctor"
version = "0.1.0"
edition = "2021"
description = "Local Postgres diagnostic agent"
authors = ["okumujustine"]

[lib]
name = "pgdoctor"
path = "src/lib.rs"

[[bin]]
name = "pgdoctor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
