[package]
name = "incharj_tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "incharj_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs = "6.0.0"
open = "5.3.3"
sha2 = "0.10.9"
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tiny_http = "0.12"
rand = "0.8"
base64 = { version = "0.22", features = ["alloc"] }
rfd = "0.15.4"
notify = "8.2.0"
tokio = { version = "1.50.0", features = ["sync", "time"] }
pdf-extract = "0.7.12"
globset = "0.4.18"
